--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "datatables.net-bs4": "^2.0.8",
+    "datatables.net-buttons": "^3.0.2",
+    "datatables.net-buttons-bs4": "^3.0.2",
+    "datatables.net-buttons-dt": "^3.0.2",
     "datatables.net-dt": "^2.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sweetalert2": "^11.12.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
