--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "datatables.net-buttons-bs4": "^3.0.2",
     "datatables.net-buttons-dt": "^3.0.2",
     "datatables.net-dt": "^2.0.8",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
