--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://fraileslegon.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "sweetalert2": "^11.12.1",
     "xlsx": "^0.18.5"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
