--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://fraileslegon.com/",
+  "homepage": "https://fraileslegon.info/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
